@@ -1,5 +1,13 @@
 2012-01-04  Joel Brobecker  <brobecker@adacore.com>
 
+	* ada-lang.c: #include "cli/cli-utils.h".
+	(get_selections): Use skip_spaces.
+	(ada_get_next_arg): Use skip_spaces and skip_to_space.
+	(catch_ada_exception_command_split): Use skip_spaces.
+	(ada_decode_assert_location): Likewise.
+
+2012-01-04  Joel Brobecker  <brobecker@adacore.com>
+
 	* linespec.c (decode_line_internal): Check for C++ or Java
 	compound constructs only if the current language is C, C++
 	or Java.
